media queries added test

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,28 @@
     padding: 0;
 }
 
+/*MEDIA QUERIES*/
+@media screen and (min-width: 600px) {
+   main {
+      font-size: 80px;
+    }
+  }
+  @media screen and (max-width: 600px) {
+   main {
+      font-size: 30px;
+    }
+  }
 
+  @media screen and (max-width: 992px) {
+    main {
+      font-size: 30px;
+    }
+  }
+  @media screen and (min-width: 992px) {
+    main {
+      font-size: 80px;
+    }
+  }
 
 /*HEADER/ nav BAR STYLES*/
 
@@ -69,11 +90,12 @@ section {
 
 /*HERO STYLES*/
 .hero-subtitle {
-    width: 35%;
+    max-width: 35%;
+    display: block;
     text-align: right;
-    margin: 3.5%;
+    margin: 5.5%;
     color: var(--primary-color);
-    font-size: 20px;
+    font-size: 50px;
     line-height: 1.2;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -129,7 +151,7 @@ main {
     line-height: 1.7;
     color: var(--tertiary-color);
     width: 80%;
-    margin: 0 auto;
+    margin: 30px auto;
     font-size: 20px;
     text-align: left;
 }
@@ -200,11 +222,11 @@ main {
 
 .list {
     list-style: none;
-    padding: 80px;
+    padding: 40px;
 }
 
 .list li {
-    display: inline;
+    display: inline-flex;
     font-size: 20px;
     padding: 10px;
 }
