--- a/assets/style.css
+++ b/assets/style.css
@@ -9,30 +9,6 @@
     margin: 0;
     padding: 0;
 }
-
-/*MEDIA QUERIES*/
-@media screen and (min-width: 600px) {
-   main {
-      font-size: 80px;
-    }
-  }
-  @media screen and (max-width: 600px) {
-   main {
-      font-size: 30px;
-    }
-  }
-
-  @media screen and (max-width: 992px) {
-    main {
-      font-size: 30px;
-    }
-  }
-  @media screen and (min-width: 992px) {
-    main {
-      font-size: 80px;
-    }
-  }
-
 /*HEADER/ nav BAR STYLES*/
 
 header {
@@ -119,105 +95,97 @@ main {
     background-color: var(--primary-color);
 }
 
-/*SECTION TITLE STYLES*/
+/*UTILITY STYLES*/
 .section-title {
     font-size: 48px;
     color: var(--secondary-color);
+    margin-bottom: 0 auto 35px auto;
     padding-bottom: 20px;
+    display: inline-block;
     text-align: left;
-    margin: 0 auto 35px auto;
     width: 20%;
-    display: flex;
-    float: left;
-
 }
 
-.vert-line {
-    border-left: 3px solid;
-    border-color: var(--tertiary-color);
-    position: absolute;
-    left: 25%;
-    padding-left: 10px;
-    height: 100px;
+.primary-border {
+    border-color: var(--secondary-color);
+}
+
+/*FLEX STYLES*/
+.flex-row {
+    display: flex;
+}
+
+.title {
+    background: var(--primary-color);
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    border-left: 6px solid var(--tertiary-color);
+}
+
+.content {
+    margin: 20px;
+    flex: 1;
+    background: var(--primary-color);
+    color: var(--secondary-color);
+}
+
+.title img {
+    width: 50%;
 }
 
 /*BIO STYLES*/
-.bio {
-    background: var(--primary-color);
-    margin: 0px 0 150px 0;
+
+.bio-text {
+    padding: 25px;
+    line-height: 1.7;
 }
 
-.bio p {
-    line-height: 1.7;
-    color: var(--tertiary-color);
-    width: 80%;
-    margin: 30px auto;
-    font-size: 20px;
-    text-align: left;
+.bio-text h3 {
+    font-size: 28px;
 }
 
-.bio h4 {
-    line-height: 1.7;
+.bio-text h4 {
     color: var(--secondary-color);
-    width: 80%;
-    margin: 0 auto;
-    font-size: 20px;
-    text-align: left;
+    font-size: 40px;
+    margin-bottom: 150px;
+}
 
+.bio-text p {
+    font-size: 30px;
+    color: var(--tertiary-color);
+    padding: 15px;
 }
 
 /*PORTFOLIO STYLES*/
-.work p {
-    line-height: 1.7;
-    color: var(--tertiary-color);
-    width: 80%;
-    margin: 0 auto;
-    font-size: 20px;
-    text-align: left;
+.work-text {
+    padding: 25px;
+    line-height: 1.3;
 }
 
-.work h4 {
-    line-height: 1.7;
+.work-text h3 {
+    font-size: 28px;
+}
+
+.work-text h4 {
     color: var(--secondary-color);
-    width: 80%;
-    margin: 0 auto;
-    font-size: 20px;
-    text-align: left;
+    font-size: 40px;
+    margin-bottom: 150px;
 }
 
-.work {
-    background: var(--primary-color);
-    margin: 350px 0 150px 0;
+.work-text p {
+    font-size: 30px;
+    color: var(--tertiary-color);
+    padding: 15px;
 }
 
 /*CONTACT STYLES*/
-
 .contact {
-    background: var(--primary-color);
-    margin: 350px 0 0px 0;
-}
-
-.contact p {
-    line-height: 1.7;
-    color: var(--tertiary-color);
-    width: 80%;
-    margin: 0 auto;
-    font-size: 20px;
-    text-align: left;
-}
-
-.contact h4 {
-    line-height: 1.7;
+    line-height: 1.3;
     color: var(--secondary-color);
-    width: 80%;
-    margin: 0 auto;
-    font-size: 20px;
-    text-align: left;
-}
-
-.table {
-    display: table;
-    margin: 0 auto;
+    font-size: 40px;
 }
 
 .list {
@@ -227,7 +195,7 @@ main {
 
 .list li {
     display: inline-flex;
-    font-size: 20px;
+    font-size: 30px;
     padding: 10px;
 }
 
