--- a/assets/style.css
+++ b/assets/style.css
@@ -97,17 +97,16 @@ main {
 
 /*UTILITY STYLES*/
 .section-title {
-    font-size: 48px;
+    font-size: 3.55vw;
     color: var(--secondary-color);
-    margin-bottom: 0 auto 35px auto;
     padding-bottom: 20px;
     display: inline-block;
     text-align: left;
-    width: 20%;
 }
 
 .primary-border {
     border-color: var(--secondary-color);
+    border-bottom: .55vw solid var(--tertiary-color);
 }
 
 /*FLEX STYLES*/
@@ -122,7 +121,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    border-left: 6px solid var(--tertiary-color);
+    border-left: .55vw solid var(--tertiary-color);
 }
 
 .content {
@@ -144,17 +143,14 @@ main {
 }
 
 .bio-text h3 {
-    font-size: 28px;
-}
-
-.bio-text h4 {
     color: var(--secondary-color);
-    font-size: 40px;
+    font-size: 2.55vw;
     margin-bottom: 150px;
+    border-bottom: .55vw solid var(--tertiary-color);
 }
 
 .bio-text p {
-    font-size: 30px;
+    font-size: 2.55vw;
     color: var(--tertiary-color);
     padding: 15px;
 }
@@ -162,30 +158,29 @@ main {
 /*PORTFOLIO STYLES*/
 .work-text {
     padding: 25px;
-    line-height: 1.3;
+    line-height: 1.7;
 }
 
 .work-text h3 {
-    font-size: 28px;
-}
-
-.work-text h4 {
     color: var(--secondary-color);
-    font-size: 40px;
+    font-size: 2.55vw;
     margin-bottom: 150px;
 }
 
 .work-text p {
-    font-size: 30px;
+    font-size: 2.55vw;
     color: var(--tertiary-color);
     padding: 15px;
 }
 
 /*CONTACT STYLES*/
 .contact {
-    line-height: 1.3;
+    line-height: 1.7;
     color: var(--secondary-color);
-    font-size: 40px;
+    font-size: 3.55vw;
+}
+.contact h2 {
+    flex-wrap: nowrap;
 }
 
 .list {
@@ -195,7 +190,7 @@ main {
 
 .list li {
     display: inline-flex;
-    font-size: 30px;
+    font-size: 2.55vw;
     padding: 10px;
 }
 
@@ -217,11 +212,14 @@ footer {
     background: var(--primary-color);
     padding: 150px 35px;
     width: 100%;
+    display: flex;
+   flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 footer h2 {
     color: var(--secondary-color);
-    font-size: 30px;
+    font-size: 2.55vw;
     margin: 70px;
 }
 
@@ -231,6 +229,4 @@ footer div {
 
 footer img {
     height: 250px;
-    margin-left: 50%;
-    margin-top: -100px;
 }
