--- a/assets/style.css
+++ b/assets/style.css
@@ -1,247 +1,9 @@
-:root {
-    --primary-color: #f6f6f6;
-    --secondary-color: #000000;
-    --tertiary-color: #545454;
+p.indent {
+    text-indent: 30px;
 }
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-/*HEADER/ nav BAR STYLES*/
-
-header {
-    padding: 4.55vw 4.55vw;
-    background-color: var(--primary-color);
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    position: sticky;
-    position: -webkit-sticky;
-    background-size: cover;
-    background-attachment: local;
-    background-position: 80%;
-    z-index: 9999;
-}
-
-header h1 {
-    font-weight: bold;
-    margin: 0;
-    font-size: 3.75vw;
-    color: var(--primary-color);
-}
-
-header a {
-    text-decoration: none;
-    color: var(--secondary-color);
-}
-
-header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-}
-
-header nav ul li a {
-    padding: 10px 15px;
-    font-weight: lighter;
-    font-size: 2.55vw;
-    color: var(--tertiary-color);
-}
-
-header nav ul li a:hover {
-    background: var(--primary-color);
-    color: var(--secondary-color);
-    border-radius: 15px;
-    text-shadow: none;
-}
-
-/* STYLE ALL SECTIONS*/
-section {
-    padding: 6vw;
-}
-
-/*HERO STYLES*/
-.hero-subtitle {
-    max-width: 35%;
-    display: block;
-    text-align: right;
-    margin: 5.5%;
-    color: var(--primary-color);
-    font-size: 6.55vw;
-    line-height: 1.2;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
 .hero {
-    background-image: url('../assets/images/peakpx.jpg');
+    background-image: url(/assets/images/peakpx.jpg);
     background-size: cover;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    padding: 7vw;
-}
 
-/*HERP STYLES END*/
-
-/*MAIN*/
-main {
-    background-color: var(--primary-color);
-}
-
-/*UTILITY STYLES*/
-.section-title {
-    font-size: 3.55vw;
-    color: var(--secondary-color);
-    padding-bottom: 2vw;
-    display: inline-block;
-    text-align: left;
-}
-
-.primary-border {
-    border-color: var(--secondary-color);
-    border-bottom: .55vw solid var(--tertiary-color);
-    width: 100%;
-}
-
-.flex-row {
-    display: flex;
-}
-
-.title {
-    background: var(--primary-color);
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    border-left: .55vw solid var(--tertiary-color);
-}
-
-.content {
-    margin: 20px;
-    flex: 1;
-    background: var(--primary-color);
-    color: var(--secondary-color);
-}
-
-.title img {
-    width: 70%;
-}
-
-/*flex box photo grid styles*/
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.item {
-    width: 50vw;
-}
-
-/*BIO STYLES*/
-
-.bio-text {
-    padding: 2vw;
-    line-height: 1.7;
-}
-
-.bio-text h3 {
-    color: var(--secondary-color);
-    font-size: 2.55vw;
-    margin-bottom: 15vw;
-    padding-left: 3.55vw;
-    padding-top: 3.55vw;
-}
-
-.bio-text p {
-    font-size: 2.55vw;
-    color: var(--tertiary-color);
-    padding: 2vw;
-}
-
-
-/*PORTFOLIO STYLES*/
-.work-text {
-    padding: 2vw;
-    line-height: 1.7;
-}
-
-.work-text h3 {
-    color: var(--secondary-color);
-    font-size: 2.55vw;
-    margin-bottom: 15vw;
-    padding-left: 3.55vw;
-    padding-top: 3.55vw;
-}
-
-.work-text p {
-    font-size: 2.55vw;
-    color: var(--tertiary-color);
-    padding: 5vw;
-}
-
-/*CONTACT STYLES*/
-.contact {
-    line-height: 1.7;
-    color: var(--secondary-color);
-    font-size: 3.55vw;
-}
-
-.contact h2 {
-    flex-wrap: wrap;
-}
-
-.list {
-    list-style: none;
-    padding-left: 3.55vw;
-    padding-top: 3.55vw;
-}
-
-.list li {
-    display: flex;
-    font-size: 2.55vw;
-    padding: .55vw;
-}
-
-.list li a {
-    text-decoration: none;
-    color: var(--secondary-color);
-}
-
-.list li a:hover {
-    background: var(--primary-color);
-    color: var(--tertiary-color);
-    border-radius: 15px;
-    text-shadow: none;
-}
-
-
-/*FOOTER STYLES*/
-footer {
-    background: var(--primary-color);
-    padding: 150px 35px;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-footer h2 {
-    color: var(--secondary-color);
-    font-size: 2.55vw;
-    margin: 70px;
-}
-
-footer div {
-    line-height: 1.5;
-}
-
-footer img {
-    height: 250px;
 }
